<resources>
    <string name="app_name">Tasks</string>
    <string name="title">My Tasks</string>
    <string name="hot_tasks">Hot tasks</string>
    <string name="progress">Progress</string>
    <string name="create_new_task">Create new task</string>
    <string name="add_task">+ Add task</string>
    <string name="choose_list">Choose list</string>
    <string name="hint_your_task_name">Your task name</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="today_at">Today at</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="no_tasks">No Tasks!</string>
</resources>
